TFP-6380 følg med på opphørt personidentifikator (#650)